--- a/AIML_A1.ipynb
+++ b/AIML_A1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz1KKeZ9+yzWGRgkj38Qwb",
+      "authorship_tag": "ABX9TyPf/8EN5+iJfXAhi7GPEymo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +92,7 @@
         "id": "6AYYGbl8DEG7",
         "outputId": "65aaa005-1145-4e4c-f573-b3a1d0bce45a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "id": "lgJhzXZnPd51",
         "outputId": "741e63f1-5cdf-4e17-a76c-30dbbdfad271"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "gM1sR3JqP59W",
         "outputId": "6e6ee7c9-caf7-497b-e1f2-9d252ca06330"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "id": "9i6dVb1rROt2",
         "outputId": "7a05204a-d1ba-4f58-e77f-03a2fbed5c1c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +224,7 @@
         "id": "tPO-pbwFRtSb",
         "outputId": "75a45052-9455-4572-e106-d9c8d4602ce0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         "id": "Y044UgqWRx-E",
         "outputId": "45662172-331a-4cf1-f863-98e70b633b8d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -304,7 +304,7 @@
         "id": "yht9-mXeSL5P",
         "outputId": "8d1ffce9-353a-46fb-9765-e285c30470b4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -335,7 +335,7 @@
         "id": "kNyAI1AISVtd",
         "outputId": "83032a50-3083-4e1a-ed30-b520d772330a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -366,7 +366,7 @@
         "id": "Vp1HGYmASXhp",
         "outputId": "cc7f6267-3ede-46c4-85b7-a2650cc09988"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -400,6 +400,55 @@
       "metadata": {
         "id": "zWCaIrwFSdus"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Part 3 – Access Data from Various Data Sources using builtin Function of Numpy, Pandas[CO3]"
+      ],
+      "metadata": {
+        "id": "PSSJCjtDAPt3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "df=pd.read_excel(\"student.xlsx\")\n",
+        "print(df)\n",
+        "df1=pd.read_csv(\"student.csv\")\n",
+        "print(df1)\n",
+        "df2=pd.read_table(\"student.txt\")\n",
+        "print(df2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UgiCq34-Ax4Z",
+        "outputId": "4cafb535-df6c-4426-a778-f655df4ef6bb"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        S id:     Student name    phone no:\n",
+            "0  2303A52051       THE__B.S.R   8374240087\n",
+            "1  2303A52058  MYAGHA YAKANSHA   7013888142\n",
+            "2  2303A52474       SIRI NIJAM  ***********\n",
+            "        S id:     Student name    phone no:\n",
+            "0  2303A52051       THE__B.S.R   8374240087\n",
+            "1  2303A52058  MYAGHA YAKANSHA   7013888142\n",
+            "2  2303A52474       SIRI NIJAM  ***********\n",
+            "        S id:     Student name    phone no:\n",
+            "0  2303A52051       THE__B.S.R   8374240087\n",
+            "1  2303A52058  MYAGHA YAKANSHA   7013888142\n",
+            "2  2303A52474       SIRI NIJAM  ***********\n"
+          ]
+        }
+      ]
     }
   ]
 }
