--- a/SML_A7.ipynb
+++ b/SML_A7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPD+kwivWPtHyPYifqFgk1z",
+      "authorship_tag": "ABX9TyMgiyXdOWRsPI6vKjXVuumK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,129 +183,8 @@
         "Read the data with pandas and find features and target variables\n",
         "Plot a graph between features and target\n",
         "Find Best fit line using linear regression.\n",
-        "Fond MSE , MAE for test size (20,30)\n",
-        "\n",
-        "\n",
-        "Feature 1\n",
-        "\n",
-        "Feature 2\n",
-        "\n",
-        "Feature 3\n",
-        "\n",
-        "Feature 4\n",
-        "\n",
-        "Target (Y)\n",
-        "\n",
-        "1.2\n",
-        "\n",
-        "2.3\n",
-        "\n",
-        "3.1\n",
-        "\n",
-        "4.2\n",
-        "\n",
-        "15.6\n",
-        "\n",
-        "2.4\n",
-        "\n",
-        "1.9\n",
-        "\n",
-        "2.8\n",
-        "\n",
-        "3.5\n",
-        "\n",
-        "13.1\n",
-        "\n",
-        "3.5\n",
-        "\n",
-        "2.7\n",
-        "\n",
-        "1.5\n",
-        "\n",
-        "2.9\n",
-        "\n",
-        "12.4\n",
-        "\n",
-        "4.1\n",
-        "\n",
-        "3\n",
-        "\n",
-        "3.6\n",
-        "\n",
-        "4.8\n",
-        "\n",
-        "18.2\n",
-        "\n",
-        "1.9\n",
-        "\n",
-        "2.8\n",
-        "\n",
-        "2.5\n",
-        "\n",
-        "3.2\n",
-        "\n",
-        "14.1\n",
-        "\n",
-        "3.7\n",
-        "\n",
-        "2.5\n",
-        "\n",
-        "1.9\n",
-        "\n",
-        "4\n",
-        "\n",
-        "16\n",
-        "\n",
-        "2.1\n",
-        "\n",
-        "3.2\n",
-        "\n",
-        "2.2\n",
-        "\n",
-        "4.1\n",
-        "\n",
-        "14.5\n",
-        "\n",
-        "3.3\n",
-        "\n",
-        "2.4\n",
-        "\n",
-        "3\n",
-        "\n",
-        "4.5\n",
-        "\n",
-        "17.3\n",
-        "\n",
-        "2.8\n",
-        "\n",
-        "3.1\n",
-        "\n",
-        "1.8\n",
-        "\n",
-        "3.6\n",
-        "\n",
-        "14.9\n",
-        "\n",
-        "4\n",
-        "\n",
-        "3.3\n",
-        "\n",
-        "2.7\n",
-        "\n",
-        "4.9\n",
-        "\n",
-        "19.2\n",
-        "\n",
-        "\n",
-        "\n"
+        "Fond MSE , MAE for test size (20,30)"
       ],
-      "metadata": {
-        "id": "VjckFa_-KCAO"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "Pj-UvZ5oKB8u"
       }
